<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id">ca-app-pub-4398358460746089/1959145293</string>

    <string name="title_activity_login">Sign in</string>
    <string name="ellipsis">&#8230;</string>
    

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_repeat">Repeat email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password incorrect or not known user</string>
    <string name="error_field_required">Required field</string>
    
    <string name="app_name">Game Board</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_contact_list">Contacts</string>
    <string name="title_contact_detail">Contact Detail</string>
    <string name="title_currentgames_list">CurrentGames</string>
    <string name="title_currentgames_detail">CurrentGames Detail</string>
    <string name="title_game_list">Games</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="drawer_open">Open left menu</string>
    <string name="drawer_close">Close left menu</string>
    <string name="welcome_please_register_">Welcome!, Please Register&#8230;</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register!</string>
    <string name="error_not_same">Fields must match!</string>
    <string name="error_login_fail">Could not login. Please, review your data.</string>
    <string name="error_connection_error">There´s been an error connecting with the server!\n\n The application will close now…</string>
    <string name="error_register_fail">Duplicated user.</string>
    <string name="error_register_success">User registered! Please login now…</string>
    <string name="searching">Searching&#8230;</string>
    <string name="no_results">No results found.</string>
    <string name="search_contact">Search contact</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="action_about">About…</string>


</resources>
